<resources>
    <string name="app_name">Parstagram</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="post_description_prompt">Write a caption...</string>
    <string name="post">Post</string>
    <string name="capture_image">Take Picture</string>
    <string name="picture_to_post">Picture to post</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_description">A description of the above image.</string>
    <string name="time_since_post">2h ago</string>
    <string name="add_comment">Add a comment</string>
    <string name="comment">Comment</string>
    <string name="set_profile_picture">Set Profile Picture</string>
</resources>