<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.ComposeFragment"
    android:orientation="vertical">

    <!-- TODO: Move logout button to a different location (maybe as a menu item or another fragment?) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="multiply"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@tools:sample/avatars"
        android:ems="10"
        android:contentDescription="@string/picture_to_post" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="multiply"
        android:textColor="@color/white"
        android:text="@string/capture_image" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/post_description_prompt"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="multiply"
        android:textColor="@color/white"
        android:text="@string/post" />

</LinearLayout>