<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="3dp"
            android:text="@string/username" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/picture_to_post"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/ufi_heart_icon"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnComment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:background="@drawable/ufi_comment"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShare"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:background="@drawable/direct"/>

        <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFavorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:background="@drawable/ufi_save_icon"/>



    </LinearLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/post_description" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray"
        android:text="@string/time_since_post" />


    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_comment"
        android:inputType="text" />

    <Button
        android:id="@+id/btnPostComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment" />
</LinearLayout>